--- a/bio.css
+++ b/bio.css
@@ -2,3 +2,7 @@ h1
 {
     font-size: 70px;font-weight: 600; background-image: linear-gradient(to left, #553c9a, #b393d3);color: transparent;background-clip: text;-webkit-background-clip: text;>
 }
+p,h4,h2,li.
+{
+    color: whitesmoke;
+}
